webapp/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webapp
 namespace: web-application
 labels:
   app: webapp
   type: front-end
spec:
  template:
    metadata:
      name: webapp-pod
      labels:
        app: webapp
        type: front-end
    spec:
      containers:
        - name: webapp-pod
          image: ithelpstream/webapp:2.0.0
          resources:
           limits:
            cpu: 100m
           requests:
            cpu: 100m 
      nodeSelector:
        node: node1
  replicas: 1
  selector:
    matchLabels:
      type: front-end
