webapp/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /web
        backend:
          serviceName: webapp-service
          servicePort: 80
